<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodSurvey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Invalid password provided</string>
    <string name="error_invalid_username_email">Invalid e-mail provided</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Finish</string>
    <string name="submit_confirm_button">Submit</string>
    <string name="submit_confirm_message">Confirm submission</string>
    <string name="age_group">Age group</string>
    <string name="error_incorrect_password">Incorrect password provided</string>
    <string name="submit">Submit</string>
    <string name="additional_feedback">Additional feedback</string>
    <string name="attached_image">Attached image</string>
    <string name="share_using">Share using</string>

    <string-array name="packaging_types">
        <item>Aseptic containers</item>
        <item>Bags</item>
        <item>Boxes</item>
        <item>Cans</item>
        <item>Cartons</item>
        <item>Flexible packaging</item>
        <item>Pallets</item>
        <item>Plastic trays</item>
        <item>Wrappers</item>
    </string-array>
    <string-array name="age_groups">
        <item>15 – 24</item>
        <item>25 – 44</item>
        <item>45 – 64</item>
        <item>65+</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
