<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Sign up progress -->
    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/sign_up_progress"
        style="@style/CircularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_firstname" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastname" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>


            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/age_group"
                android:textAppearance="@style/TextAppearance.FloatLabel" />

            <Spinner
                android:id="@+id/age_group"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:entries="@array/age_groups" />

            <com.foodsurvey.foodsurvey.ui.widget.PaperButton
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/paper_button_height"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:text="@string/action_register"
                app:paper_color="@color/button_background_color"
                app:paper_font="fonts/Roboto-Medium.ttf"
                app:paper_raised="false"
                app:paper_text="REGISTER"
                app:paper_text_color="@color/primary_text_default_material_dark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>