<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_firstname" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastname" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>

            <com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:floatLabelSidePadding="4dp"
                app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.foodsurvey.foodsurvey.ui.widget.FloatLabelLayout>


            <LinearLayout
                android:id="@+id/age_group_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/age_group"
                    android:textAppearance="@style/TextAppearance.FloatLabel" />

                <Spinner
                    android:id="@+id/age_group"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:entries="@array/age_groups" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>